Update FastText code

--- a/NLPCrashCourse/Session2/2_2_Text_representation.ipynb
+++ b/NLPCrashCourse/Session2/2_2_Text_representation.ipynb
@@ -1703,7 +1703,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 718
+          "height": 569
         },
         "id": "TUQ-pSKaUFg2",
         "outputId": "9a9d67f6-835b-40f1-8ed6-6a982935ff9d"
@@ -1725,64 +1725,54 @@
     {
       "cell_type": "code",
       "source": [
-        "import numpy as np\n",
-        "import gensim.downloader as api\n",
-        "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns\n",
-        "from sklearn.decomposition import PCA\n",
+        "# @title FastText\n",
+        "# import numpy as np\n",
+        "# import gensim.downloader as api\n",
+        "# import matplotlib.pyplot as plt\n",
+        "# import seaborn as sns\n",
+        "# from sklearn.decomposition import PCA\n",
         "\n",
-        "# Load pre-trained FastText model\n",
-        "fasttext_model = api.load('fasttext-wiki-news-subwords-300')\n",
+        "# # Load pre-trained FastText model\n",
+        "# fasttext_model = api.load('fasttext-wiki-news-subwords-300')\n",
         "\n",
-        "# Sample sentences\n",
-        "sentences = [\n",
-        "    \"Word embeddings provide dense vector representations of words.\",\n",
-        "    \"FastText is an extension of Word2Vec.\",\n",
-        "    \"Natural language processing tasks often use pre-trained embeddings.\",\n",
-        "    \"Spacy allows easy integration of pre-trained models.\",\n",
-        "]\n",
+        "# # Sample sentences\n",
+        "# sentences = [\n",
+        "#     \"Word embeddings provide dense vector representations of words.\",\n",
+        "#     \"FastText is an extension of Word2Vec.\",\n",
+        "#     \"Natural language processing tasks often use pre-trained embeddings.\",\n",
+        "#     \"Spacy allows easy integration of pre-trained models.\",\n",
+        "# ]\n",
         "\n",
-        "# Get word embeddings using the FastText model\n",
-        "word_embeddings = [fasttext_model[word] for sent in sentences for word in sent.split()]\n",
+        "# # Get word embeddings using the FastText model\n",
+        "# word_embeddings = [fasttext_model[word] for sent in sentences for word in sent.split()]\n",
         "\n",
-        "# Create a DataFrame using the word embeddings\n",
-        "df_word_embeddings = np.array(word_embeddings)\n",
-        "df_word_embeddings = pd.DataFrame(df_word_embeddings, columns=[f\"Dimension_{i+1}\" for i in range(len(df_word_embeddings[0]))])\n",
+        "# # Create a DataFrame using the word embeddings\n",
+        "# df_word_embeddings = np.array(word_embeddings)\n",
+        "# df_word_embeddings = pd.DataFrame(df_word_embeddings, columns=[f\"Dimension_{i+1}\" for i in range(len(df_word_embeddings[0]))])\n",
         "\n",
-        "# Perform PCA for dimensionality reduction\n",
-        "pca = PCA(n_components=2)\n",
-        "word_embeddings_2d = pca.fit_transform(df_word_embeddings)\n",
+        "# # Perform PCA for dimensionality reduction\n",
+        "# pca = PCA(n_components=2)\n",
+        "# word_embeddings_2d = pca.fit_transform(df_word_embeddings)\n",
         "\n",
-        "# Create a DataFrame with 2D PCA results and sentences as labels\n",
-        "df_pca = pd.DataFrame(word_embeddings_2d, columns=['PC1', 'PC2'])\n",
-        "df_pca['Sentence'] = [sent for sent in sentences for _ in sent.split()]\n",
+        "# # Create a DataFrame with 2D PCA results and sentences as labels\n",
+        "# df_pca = pd.DataFrame(word_embeddings_2d, columns=['PC1', 'PC2'])\n",
+        "# df_pca['Sentence'] = [sent for sent in sentences for _ in sent.split()]\n",
         "\n",
-        "# Display the 2D PCA results in a scatter plot\n",
-        "plt.figure(figsize=(10, 8))\n",
-        "sns.scatterplot(data=df_pca, x='PC1', y='PC2', hue='Sentence', palette='viridis', s=100)\n",
-        "plt.title('Word Embeddings Visualization (2D PCA)')\n",
-        "plt.xlabel('Principal Component 1')\n",
-        "plt.ylabel('Principal Component 2')\n",
-        "plt.legend(bbox_to_anchor=(1, 1), loc='upper left', title='Sentence')\n",
-        "plt.show()"
+        "# # Display the 2D PCA results in a scatter plot\n",
+        "# plt.figure(figsize=(10, 8))\n",
+        "# sns.scatterplot(data=df_pca, x='PC1', y='PC2', hue='Sentence', palette='viridis', s=100)\n",
+        "# plt.title('Word Embeddings Visualization (2D PCA)')\n",
+        "# plt.xlabel('Principal Component 1')\n",
+        "# plt.ylabel('Principal Component 2')\n",
+        "# plt.legend(bbox_to_anchor=(1, 1), loc='upper left', title='Sentence')\n",
+        "# plt.show()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "T-YIUyRRUsrg",
-        "outputId": "a993b5dd-01fd-44af-c888-501c544f0074"
+        "cellView": "form",
+        "id": "T-YIUyRRUsrg"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[============================================------] 89.5% 858.2/958.4MB downloaded"
-          ]
-        }
-      ]
+      "execution_count": 28,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
